fix: add default thumbnail image (resolves #51), fix news spacing

--- a/src/scss/pages/_news-ideas.scss
+++ b/src/scss/pages/_news-ideas.scss
@@ -110,8 +110,7 @@
     background: $blue-500;
   }
 
-  .grid .entry {
-    margin-bottom: 5rem;
+  .entry + .entry {
     margin-top: 5rem;
   }
 
